<?xml version="1.0"?>
<package>
  <name>chisel_python_client</name>
  <version>1.0.0</version>
  <description>
    Python wrapper for chisel_ros
  </description>
  <maintainer email="mklingen@andrew.cmu.edu">Matt Klingensmith</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python</build_depend>
  <build_depend>chisel_msgs</build_depend>
  <run_depend>python</run_depend>
  <run_depend>python-catkin-pkg</run_depend>
  <run_depend>chisel_msgs</run_depend>
</package>
